tester/testsuite/extensions/objects1/bad/bad005.jl
/* new undeclared class */

int main() {
	Point p = new Point;
	return 0;
}
